; ModuleID = '/home/carl/AnghaBench/tengine/src/http/modules/extr_ngx_http_log_module.c_ngx_http_log_script_write.c'
source_filename = "/home/carl/AnghaBench/tengine/src/http/modules/extr_ngx_http_log_module.c_ngx_http_log_script_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_29__ = type { %struct.TYPE_26__*, i32, i32 }
%struct.TYPE_26__ = type { i32 }
%struct.TYPE_30__ = type { %struct.TYPE_25__*, %struct.TYPE_24__* }
%struct.TYPE_25__ = type { i32 }
%struct.TYPE_24__ = type { i32 }
%struct.TYPE_27__ = type { i8*, i32 }
%struct.TYPE_28__ = type { i32, i32, i64, i32, i8*, i32, i32, i32, i32, i32, i32, i32 }
%struct.TYPE_31__ = type { i32, i32, i32 }
%struct.TYPE_32__ = type { i32, i32, i32, i32, i32 }

@ngx_http_core_module = common dso_local global i32 0, align 4
@NGX_OK = common dso_local global i64 0, align 8
@NGX_LOG_ERR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [30 x i8] c"testing \22%s\22 existence failed\00", align 1
@NGX_ENOTDIR = common dso_local global i32 0, align 4
@NGX_LOG_DEBUG_HTTP = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [14 x i8] c"http log \22%s\22\00", align 1
@ngx_http_log_module = common dso_local global i32 0, align 4
@NGX_OPEN_FILE_DIRECTIO_OFF = common dso_local global i32 0, align 4
@NGX_LOG_CRIT = common dso_local global i32 0, align 4
@ngx_errno = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [15 x i8] c"%s \22%s\22 failed\00", align 1
@.str.3 = private unnamed_addr constant [13 x i8] c"http log #%d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.TYPE_29__*, %struct.TYPE_30__*, i8**, i8*, i64)* @ngx_http_log_script_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @ngx_http_log_script_write(%struct.TYPE_29__* %0, %struct.TYPE_30__* %1, i8** %2, i8* %3, i64 %4) #0 {
  %6 = alloca i64, align 8
  %7 = alloca %struct.TYPE_29__*, align 8
  %8 = alloca %struct.TYPE_30__*, align 8
  %9 = alloca i8**, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  %13 = alloca i64, align 8
  %14 = alloca %struct.TYPE_27__, align 8
  %15 = alloca %struct.TYPE_27__, align 8
  %16 = alloca %struct.TYPE_28__, align 8
  %17 = alloca %struct.TYPE_31__*, align 8
  %18 = alloca %struct.TYPE_32__*, align 8
  store %struct.TYPE_29__* %0, %struct.TYPE_29__** %7, align 8
  store %struct.TYPE_30__* %1, %struct.TYPE_30__** %8, align 8
  store i8** %2, i8*** %9, align 8
  store i8* %3, i8** %10, align 8
  store i64 %4, i64* %11, align 8
  %19 = load %struct.TYPE_29__*, %struct.TYPE_29__** %7, align 8
  %20 = load i32, i32* @ngx_http_core_module, align 4
  %21 = call i8* @ngx_http_get_module_loc_conf(%struct.TYPE_29__* %19, i32 %20)
  %22 = bitcast i8* %21 to %struct.TYPE_32__*
  store %struct.TYPE_32__* %22, %struct.TYPE_32__** %18, align 8
  %23 = load %struct.TYPE_29__*, %struct.TYPE_29__** %7, align 8
  %24 = getelementptr inbounds %struct.TYPE_29__, %struct.TYPE_29__* %23, i32 0, i32 2
  %25 = load i32, i32* %24, align 4
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %111, label %27

27:                                               ; preds = %5
  %28 = load %struct.TYPE_29__*, %struct.TYPE_29__** %7, align 8
  %29 = call i32* @ngx_http_map_uri_to_path(%struct.TYPE_29__* %28, %struct.TYPE_27__* %15, i64* %12, i32 0)
  %30 = icmp eq i32* %29, null
  br i1 %30, label %31, label %33

31:                                               ; preds = %27
  %32 = load i64, i64* %11, align 8
  store i64 %32, i64* %6, align 8
  br label %219

33:                                               ; preds = %27
  %34 = getelementptr inbounds %struct.TYPE_27__, %struct.TYPE_27__* %15, i32 0, i32 0
  %35 = load i8*, i8** %34, align 8
  %36 = load i64, i64* %12, align 8
  %37 = getelementptr inbounds i8, i8* %35, i64 %36
  store i8 0, i8* %37, align 1
  %38 = call i32 @ngx_memzero(%struct.TYPE_28__* %16, i32 64)
  %39 = load %struct.TYPE_32__*, %struct.TYPE_32__** %18, align 8
  %40 = getelementptr inbounds %struct.TYPE_32__, %struct.TYPE_32__* %39, i32 0, i32 4
  %41 = load i32, i32* %40, align 4
  %42 = getelementptr inbounds %struct.TYPE_28__, %struct.TYPE_28__* %16, i32 0, i32 8
  store i32 %41, i32* %42, align 4
  %43 = load %struct.TYPE_32__*, %struct.TYPE_32__** %18, align 8
  %44 = getelementptr inbounds %struct.TYPE_32__, %struct.TYPE_32__* %43, i32 0, i32 3
  %45 = load i32, i32* %44, align 4
  %46 = getelementptr inbounds %struct.TYPE_28__, %struct.TYPE_28__* %16, i32 0, i32 7
  store i32 %45, i32* %46, align 8
  %47 = getelementptr inbounds %struct.TYPE_28__, %struct.TYPE_28__* %16, i32 0, i32 0
  store i32 1, i32* %47, align 8
  %48 = getelementptr inbounds %struct.TYPE_28__, %struct.TYPE_28__* %16, i32 0, i32 1
  store i32 1, i32* %48, align 4
  %49 = load %struct.TYPE_32__*, %struct.TYPE_32__** %18, align 8
  %50 = getelementptr inbounds %struct.TYPE_32__, %struct.TYPE_32__* %49, i32 0, i32 2
  %51 = load i32, i32* %50, align 4
  %52 = getelementptr inbounds %struct.TYPE_28__, %struct.TYPE_28__* %16, i32 0, i32 11
  store i32 %51, i32* %52, align 8
  %53 = load %struct.TYPE_32__*, %struct.TYPE_32__** %18, align 8
  %54 = getelementptr inbounds %struct.TYPE_32__, %struct.TYPE_32__* %53, i32 0, i32 1
  %55 = load i32, i32* %54, align 4
  %56 = getelementptr inbounds %struct.TYPE_28__, %struct.TYPE_28__* %16, i32 0, i32 10
  store i32 %55, i32* %56, align 4
  %57 = load %struct.TYPE_29__*, %struct.TYPE_29__** %7, align 8
  %58 = load %struct.TYPE_32__*, %struct.TYPE_32__** %18, align 8
  %59 = call i64 @ngx_http_set_disable_symlinks(%struct.TYPE_29__* %57, %struct.TYPE_32__* %58, %struct.TYPE_27__* %15, %struct.TYPE_28__* %16)
  %60 = load i64, i64* @NGX_OK, align 8
  %61 = icmp ne i64 %59, %60
  br i1 %61, label %62, label %64

62:                                               ; preds = %33
  %63 = load i64, i64* %11, align 8
  store i64 %63, i64* %6, align 8
  br label %219

64:                                               ; preds = %33
  %65 = load %struct.TYPE_32__*, %struct.TYPE_32__** %18, align 8
  %66 = getelementptr inbounds %struct.TYPE_32__, %struct.TYPE_32__* %65, i32 0, i32 0
  %67 = load i32, i32* %66, align 4
  %68 = load %struct.TYPE_29__*, %struct.TYPE_29__** %7, align 8
  %69 = getelementptr inbounds %struct.TYPE_29__, %struct.TYPE_29__* %68, i32 0, i32 1
  %70 = load i32, i32* %69, align 8
  %71 = call i64 @ngx_open_cached_file(i32 %67, %struct.TYPE_27__* %15, %struct.TYPE_28__* %16, i32 %70)
  %72 = load i64, i64* @NGX_OK, align 8
  %73 = icmp ne i64 %71, %72
  br i1 %73, label %74, label %93

74:                                               ; preds = %64
  %75 = getelementptr inbounds %struct.TYPE_28__, %struct.TYPE_28__* %16, i32 0, i32 2
  %76 = load i64, i64* %75, align 8
  %77 = icmp eq i64 %76, 0
  br i1 %77, label %78, label %80

78:                                               ; preds = %74
  %79 = load i64, i64* %11, align 8
  store i64 %79, i64* %6, align 8
  br label %219

80:                                               ; preds = %74
  %81 = load i32, i32* @NGX_LOG_ERR, align 4
  %82 = load %struct.TYPE_29__*, %struct.TYPE_29__** %7, align 8
  %83 = getelementptr inbounds %struct.TYPE_29__, %struct.TYPE_29__* %82, i32 0, i32 0
  %84 = load %struct.TYPE_26__*, %struct.TYPE_26__** %83, align 8
  %85 = getelementptr inbounds %struct.TYPE_26__, %struct.TYPE_26__* %84, i32 0, i32 0
  %86 = load i32, i32* %85, align 4
  %87 = getelementptr inbounds %struct.TYPE_28__, %struct.TYPE_28__* %16, i32 0, i32 2
  %88 = load i64, i64* %87, align 8
  %89 = getelementptr inbounds %struct.TYPE_27__, %struct.TYPE_27__* %15, i32 0, i32 0
  %90 = load i8*, i8** %89, align 8
  %91 = call i32 (i32, i32, i64, i8*, i8*, ...) @ngx_log_error(i32 %81, i32 %86, i64 %88, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0), i8* %90)
  %92 = load i64, i64* %11, align 8
  store i64 %92, i64* %6, align 8
  br label %219

93:                                               ; preds = %64
  %94 = getelementptr inbounds %struct.TYPE_28__, %struct.TYPE_28__* %16, i32 0, i32 9
  %95 = load i32, i32* %94, align 8
  %96 = icmp ne i32 %95, 0
  br i1 %96, label %110, label %97

97:                                               ; preds = %93
  %98 = load i32, i32* @NGX_LOG_ERR, align 4
  %99 = load %struct.TYPE_29__*, %struct.TYPE_29__** %7, align 8
  %100 = getelementptr inbounds %struct.TYPE_29__, %struct.TYPE_29__* %99, i32 0, i32 0
  %101 = load %struct.TYPE_26__*, %struct.TYPE_26__** %100, align 8
  %102 = getelementptr inbounds %struct.TYPE_26__, %struct.TYPE_26__* %101, i32 0, i32 0
  %103 = load i32, i32* %102, align 4
  %104 = load i32, i32* @NGX_ENOTDIR, align 4
  %105 = sext i32 %104 to i64
  %106 = getelementptr inbounds %struct.TYPE_27__, %struct.TYPE_27__* %15, i32 0, i32 0
  %107 = load i8*, i8** %106, align 8
  %108 = call i32 (i32, i32, i64, i8*, i8*, ...) @ngx_log_error(i32 %98, i32 %103, i64 %105, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0), i8* %107)
  %109 = load i64, i64* %11, align 8
  store i64 %109, i64* %6, align 8
  br label %219

110:                                              ; preds = %93
  br label %111

111:                                              ; preds = %110, %5
  %112 = load %struct.TYPE_29__*, %struct.TYPE_29__** %7, align 8
  %113 = load %struct.TYPE_30__*, %struct.TYPE_30__** %8, align 8
  %114 = getelementptr inbounds %struct.TYPE_30__, %struct.TYPE_30__* %113, i32 0, i32 1
  %115 = load %struct.TYPE_24__*, %struct.TYPE_24__** %114, align 8
  %116 = getelementptr inbounds %struct.TYPE_24__, %struct.TYPE_24__* %115, i32 0, i32 0
  %117 = load i32, i32* %116, align 4
  %118 = load %struct.TYPE_30__*, %struct.TYPE_30__** %8, align 8
  %119 = getelementptr inbounds %struct.TYPE_30__, %struct.TYPE_30__* %118, i32 0, i32 0
  %120 = load %struct.TYPE_25__*, %struct.TYPE_25__** %119, align 8
  %121 = getelementptr inbounds %struct.TYPE_25__, %struct.TYPE_25__* %120, i32 0, i32 0
  %122 = load i32, i32* %121, align 4
  %123 = call i32* @ngx_http_script_run(%struct.TYPE_29__* %112, %struct.TYPE_27__* %14, i32 %117, i32 1, i32 %122)
  %124 = icmp eq i32* %123, null
  br i1 %124, label %125, label %127

125:                                              ; preds = %111
  %126 = load i64, i64* %11, align 8
  store i64 %126, i64* %6, align 8
  br label %219

127:                                              ; preds = %111
  %128 = getelementptr inbounds %struct.TYPE_27__, %struct.TYPE_27__* %14, i32 0, i32 0
  %129 = load i8*, i8** %128, align 8
  %130 = getelementptr inbounds %struct.TYPE_27__, %struct.TYPE_27__* %14, i32 0, i32 1
  %131 = load i32, i32* %130, align 8
  %132 = sub nsw i32 %131, 1
  %133 = sext i32 %132 to i64
  %134 = getelementptr inbounds i8, i8* %129, i64 %133
  store i8 0, i8* %134, align 1
  %135 = getelementptr inbounds %struct.TYPE_27__, %struct.TYPE_27__* %14, i32 0, i32 0
  %136 = load i8*, i8** %135, align 8
  %137 = load i8**, i8*** %9, align 8
  store i8* %136, i8** %137, align 8
  %138 = load i32, i32* @NGX_LOG_DEBUG_HTTP, align 4
  %139 = load %struct.TYPE_29__*, %struct.TYPE_29__** %7, align 8
  %140 = getelementptr inbounds %struct.TYPE_29__, %struct.TYPE_29__* %139, i32 0, i32 0
  %141 = load %struct.TYPE_26__*, %struct.TYPE_26__** %140, align 8
  %142 = getelementptr inbounds %struct.TYPE_26__, %struct.TYPE_26__* %141, i32 0, i32 0
  %143 = load i32, i32* %142, align 4
  %144 = getelementptr inbounds %struct.TYPE_27__, %struct.TYPE_27__* %14, i32 0, i32 0
  %145 = load i8*, i8** %144, align 8
  %146 = call i32 @ngx_log_debug1(i32 %138, i32 %143, i32 0, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.1, i64 0, i64 0), i8* %145)
  %147 = load %struct.TYPE_29__*, %struct.TYPE_29__** %7, align 8
  %148 = load i32, i32* @ngx_http_log_module, align 4
  %149 = call i8* @ngx_http_get_module_loc_conf(%struct.TYPE_29__* %147, i32 %148)
  %150 = bitcast i8* %149 to %struct.TYPE_31__*
  store %struct.TYPE_31__* %150, %struct.TYPE_31__** %17, align 8
  %151 = call i32 @ngx_memzero(%struct.TYPE_28__* %16, i32 64)
  %152 = getelementptr inbounds %struct.TYPE_28__, %struct.TYPE_28__* %16, i32 0, i32 3
  store i32 1, i32* %152, align 8
  %153 = load %struct.TYPE_31__*, %struct.TYPE_31__** %17, align 8
  %154 = getelementptr inbounds %struct.TYPE_31__, %struct.TYPE_31__* %153, i32 0, i32 2
  %155 = load i32, i32* %154, align 4
  %156 = getelementptr inbounds %struct.TYPE_28__, %struct.TYPE_28__* %16, i32 0, i32 8
  store i32 %155, i32* %156, align 4
  %157 = load %struct.TYPE_31__*, %struct.TYPE_31__** %17, align 8
  %158 = getelementptr inbounds %struct.TYPE_31__, %struct.TYPE_31__* %157, i32 0, i32 1
  %159 = load i32, i32* %158, align 4
  %160 = getelementptr inbounds %struct.TYPE_28__, %struct.TYPE_28__* %16, i32 0, i32 7
  store i32 %159, i32* %160, align 8
  %161 = load i32, i32* @NGX_OPEN_FILE_DIRECTIO_OFF, align 4
  %162 = getelementptr inbounds %struct.TYPE_28__, %struct.TYPE_28__* %16, i32 0, i32 6
  store i32 %161, i32* %162, align 4
  %163 = load %struct.TYPE_29__*, %struct.TYPE_29__** %7, align 8
  %164 = load %struct.TYPE_32__*, %struct.TYPE_32__** %18, align 8
  %165 = call i64 @ngx_http_set_disable_symlinks(%struct.TYPE_29__* %163, %struct.TYPE_32__* %164, %struct.TYPE_27__* %14, %struct.TYPE_28__* %16)
  %166 = load i64, i64* @NGX_OK, align 8
  %167 = icmp ne i64 %165, %166
  br i1 %167, label %168, label %170

168:                                              ; preds = %127
  %169 = load i64, i64* %11, align 8
  store i64 %169, i64* %6, align 8
  br label %219

170:                                              ; preds = %127
  %171 = load %struct.TYPE_31__*, %struct.TYPE_31__** %17, align 8
  %172 = getelementptr inbounds %struct.TYPE_31__, %struct.TYPE_31__* %171, i32 0, i32 0
  %173 = load i32, i32* %172, align 4
  %174 = load %struct.TYPE_29__*, %struct.TYPE_29__** %7, align 8
  %175 = getelementptr inbounds %struct.TYPE_29__, %struct.TYPE_29__* %174, i32 0, i32 1
  %176 = load i32, i32* %175, align 8
  %177 = call i64 @ngx_open_cached_file(i32 %173, %struct.TYPE_27__* %14, %struct.TYPE_28__* %16, i32 %176)
  %178 = load i64, i64* @NGX_OK, align 8
  %179 = icmp ne i64 %177, %178
  br i1 %179, label %180, label %203

180:                                              ; preds = %170
  %181 = getelementptr inbounds %struct.TYPE_28__, %struct.TYPE_28__* %16, i32 0, i32 2
  %182 = load i64, i64* %181, align 8
  %183 = icmp eq i64 %182, 0
  br i1 %183, label %184, label %186

184:                                              ; preds = %180
  %185 = load i64, i64* %11, align 8
  store i64 %185, i64* %6, align 8
  br label %219

186:                                              ; preds = %180
  %187 = load i32, i32* @NGX_LOG_CRIT, align 4
  %188 = load %struct.TYPE_29__*, %struct.TYPE_29__** %7, align 8
  %189 = getelementptr inbounds %struct.TYPE_29__, %struct.TYPE_29__* %188, i32 0, i32 0
  %190 = load %struct.TYPE_26__*, %struct.TYPE_26__** %189, align 8
  %191 = getelementptr inbounds %struct.TYPE_26__, %struct.TYPE_26__* %190, i32 0, i32 0
  %192 = load i32, i32* %191, align 4
  %193 = load i32, i32* @ngx_errno, align 4
  %194 = sext i32 %193 to i64
  %195 = getelementptr inbounds %struct.TYPE_28__, %struct.TYPE_28__* %16, i32 0, i32 5
  %196 = load i32, i32* %195, align 8
  %197 = sext i32 %196 to i64
  %198 = inttoptr i64 %197 to i8*
  %199 = getelementptr inbounds %struct.TYPE_27__, %struct.TYPE_27__* %14, i32 0, i32 0
  %200 = load i8*, i8** %199, align 8
  %201 = call i32 (i32, i32, i64, i8*, i8*, ...) @ngx_log_error(i32 %187, i32 %192, i64 %194, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.2, i64 0, i64 0), i8* %198, i8* %200)
  %202 = load i64, i64* %11, align 8
  store i64 %202, i64* %6, align 8
  br label %219

203:                                              ; preds = %170
  %204 = load i32, i32* @NGX_LOG_DEBUG_HTTP, align 4
  %205 = load %struct.TYPE_29__*, %struct.TYPE_29__** %7, align 8
  %206 = getelementptr inbounds %struct.TYPE_29__, %struct.TYPE_29__* %205, i32 0, i32 0
  %207 = load %struct.TYPE_26__*, %struct.TYPE_26__** %206, align 8
  %208 = getelementptr inbounds %struct.TYPE_26__, %struct.TYPE_26__* %207, i32 0, i32 0
  %209 = load i32, i32* %208, align 4
  %210 = getelementptr inbounds %struct.TYPE_28__, %struct.TYPE_28__* %16, i32 0, i32 4
  %211 = load i8*, i8** %210, align 8
  %212 = call i32 @ngx_log_debug1(i32 %204, i32 %209, i32 0, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.3, i64 0, i64 0), i8* %211)
  %213 = getelementptr inbounds %struct.TYPE_28__, %struct.TYPE_28__* %16, i32 0, i32 4
  %214 = load i8*, i8** %213, align 8
  %215 = load i8*, i8** %10, align 8
  %216 = load i64, i64* %11, align 8
  %217 = call i64 @ngx_write_fd(i8* %214, i8* %215, i64 %216)
  store i64 %217, i64* %13, align 8
  %218 = load i64, i64* %13, align 8
  store i64 %218, i64* %6, align 8
  br label %219

219:                                              ; preds = %203, %186, %184, %168, %125, %97, %80, %78, %62, %31
  %220 = load i64, i64* %6, align 8
  ret i64 %220
}

declare dso_local i8* @ngx_http_get_module_loc_conf(%struct.TYPE_29__*, i32) #1

declare dso_local i32* @ngx_http_map_uri_to_path(%struct.TYPE_29__*, %struct.TYPE_27__*, i64*, i32) #1

declare dso_local i32 @ngx_memzero(%struct.TYPE_28__*, i32) #1

declare dso_local i64 @ngx_http_set_disable_symlinks(%struct.TYPE_29__*, %struct.TYPE_32__*, %struct.TYPE_27__*, %struct.TYPE_28__*) #1

declare dso_local i64 @ngx_open_cached_file(i32, %struct.TYPE_27__*, %struct.TYPE_28__*, i32) #1

declare dso_local i32 @ngx_log_error(i32, i32, i64, i8*, i8*, ...) #1

declare dso_local i32* @ngx_http_script_run(%struct.TYPE_29__*, %struct.TYPE_27__*, i32, i32, i32) #1

declare dso_local i32 @ngx_log_debug1(i32, i32, i32, i8*, i8*) #1

declare dso_local i64 @ngx_write_fd(i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
